2008-07-31  Miguel Sofer  <msofer@users.sf.net>

	* tests/NRE.test:  replaced all deep-recursing tests by shallower
	tests that actually measure the C-stack depth. This makes them
	bearable again (even under memdebug) and avoid crashing on failure.
	
	* generic/tclBasic.c:   NR-enabling [catch], [if] and [for] and
	* generic/tclCmdAH.c:   [while] (the script, not the tests)
	* generic/tclCmdIL.c:
	* generic/tclCmdMZ.c:
	* generic/tclInt.h:
	* tests/NRE.test:

	* generic/tclBasic.c:   Moved the few remaining defs from tclNRE.h to
	* generic/tclDictObj.c: tclInt.h, eliminated inclusion of tclNRE.h
	* generic/tclExecute.c: everywhere.
	* generic/tclInt.h:
	* generic/tclInterp.c:
	* generic/tclNRE.h (removed):
	* generic/tclNamesp.c:
	* generic/tclOOBasic.c:
	* generic/tclOOInt.h:
	* generic/tclProc.c:
	* generic/tclTest.c:
	* unix/Makefile.in:

2008-07-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Improved tailcalls.
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	* generic/tclTest.c:
	* tests/NRE.test:

	* generic/tclBasic.c (TclNREvalObjEx): new comments and code reorg
	to clarify what is happening.

	* generic/tclBasic.c: guard against the value of iPtr->evalFlags
	changing between the times where TEOV and TEOV_exception
	run. Thanks dgp for catching this.

2008-07-29  Miguel Sofer  <msofer@users.sf.net>

	* tests/NRE.test: new tests that went MIA in the NRE revamping

	* generic/tclBasic.c:    Clean up
	* generic/tclNRE.h:
	* generic/tclExecute.c:

	* generic/tclBasic.c:  Made use of the thread's alloc cache
	* generic/tclInt.h:    stored in the ekeko at interp creation
	* generic/tclNRE.h:    to avoid hitting the TSD each time an
	* generic/tclThreadAlloc.c: NRE callback is pushed or pulled; the
	approach is suitably general to extend to evry other obj
	allocation where an interp is know; this is left for some other
	time, requires a lot of grunt work.

	* generic/tclExecute.c:  fix [Bug 2030670] that cause